--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "async-validator": "^1.7.1",
+    "async-validator": "1.8.2",
     "axios": "0.16.2",
-    "deepmerge": "^1.5.0",
-    "iview": "^2.3.0",
+    "deepmerge": "1.5.2",
+    "iview": "2.14.2",
     "jquery": "3.1.1",
     "js-cookie": "2.1.4",
-    "mavon-editor": "^2.2.4",
+    "mavon-editor": "2.6.5",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "3.0.2",
     "nprogress": "0.2.0",
-    "popper.js": "^0.6.4",
-    "vue": "2.3.3",
-    "vue-echarts": "^2.4.0",
-    "vue-json-tree-view": "^2.0.7",
+    "popper.js": "0.6.4",
+    "vue": "2.5.16",
+    "vue-echarts": "2.6.0",
+    "vue-json-tree-view": "2.1.4",
     "vue-router": "2.5.3",
-    "vue-tinymce": "github:lpreterite/vue-tinymce",
-    "vuex": "2.3.1"
+    "vue-tinymce": "1.0.5",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
-    "commander": "^2.11.0",
-    "fs.extra": "^1.3.2",
+    "commander": "2.15.1",
+    "fs.extra": "1.3.2",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
@@ -61,7 +61,7 @@
     "function-bind": "1.1.0",
     "html-webpack-plugin": "2.28.0",
     "http-proxy-middleware": "0.17.4",
-    "node-sass": "^4.5.0",
+    "node-sass": "4.9.0",
     "opn": "4.0.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
     "ora": "1.1.0",
@@ -74,7 +74,7 @@
     "url-loader": "0.5.8",
     "vue-loader": "12.2.1",
     "vue-style-loader": "3.0.1",
-    "vue-template-compiler": "2.3.3",
+    "vue-template-compiler": "2.5.16",
     "webpack": "2.6.1",
     "webpack-bundle-analyzer": "2.8.2",
     "webpack-dev-middleware": "1.10.2",
